# cfbsim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEV_SETUP.md  Procfile  README.md  Untitled  index.html  manage.py  mydatabase  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt  reset_heroku_db.sh  sim.md  test.py
backend/: Procfile  base.html  manage.py  requirements.txt  test.json
backend/api/: models.py  serializers.py  urls.py
backend/cfbsim/: asgi.py  settings.py  urls.py  wsgi.py
backend/data/: conferences.json  headlines.json  name_mapping.txt  prestige.py  rivalries.json  states.json  teams.json
backend/logic/: awards.py  betting.py  headlines.py  player_generation.py  players.py  roster_management.py  schedule.py  season.py  stats.py  util.py
backend/rankings/: views.py
backend/recruit/: urls.py  (+1 more)
cfbsim/: asgi.py  settings.py  urls.py
dashboard/: views.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend2/: README.md  index.html  package-lock.json  package.json  vite.config.ts
legacy/: reset_heroku_db.sh
rankings/: urls.py  views.py
ratings/: 2010.csv  srs.py
schedule/: urls.py  views.py
scripts/: debug_schedule.ts  eval_winrate.ts  generate_betting_odds.ts  generate_history.ts  tune_winrate.ts  tune_yards.ts
src/: App.tsx
start/: models.py  urls.py  views.py
static/: base.css  names.py  sim.py
stats/: urls.py  views.py
team/: urls.py  views.py
templates/: base.html  basenonav.html
util/: players.py  schedule.py  stats.py  util.py
years/: 2022.json  2023.json  otherTeams.json
(+548 files in other folders)
